# wasm_specs

./: .editorconfig  Cargo.toml  LICENSE  README.md  index.html
.devcontainer/: Dockerfile  devcontainer.json
src/: lib.rs  main.rs
src/components/: mod.rs  position.rs  velocity.rs
src/io/: log.rs  log_wasm.rs  mod.rs
src/systems/: mod.rs  render.rs
tests/: integration_test.rs
