# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "wasm_specs"
version = "0.1.0"
authors = ["Brydon DeWitt <dewittbc@gmail.com>"]
edition = "2018"
description = """
This project is a proof of concept that SPECS (https://github.com/amethyst/specs) can be used in a browser environment
"""
repository = "https://github.com/bcdewitt/wasm_specs"
license = "ISC"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.69"
web-sys = { version = "0.3.46", features = ['console'] }
specs = { version = "0.16.1", features = ["specs-derive"] }
